demos/tbs-kubeapps-fortune/files/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fortune-ingress
  namespace: NAMESPACE
  annotations:
    - kubernetes.io/ingress.class: contour
  labels:
    app: fortune-app
spec:
  tls:
  - secretName: https-secret
    hosts:
      - fortune..DNS_DOMAIN
  rules:
  - host: fortune..DNS_DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: fortune-service
          servicePort: 80
